[package]
name = "su_zhang_sqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
# command line tools argument parsing
clap = { version = "4.5.20", features = ["derive"] }

# HTTP request
reqwest = { version = "0.12.8",features = ["blocking", "json"] }

# time and memory monitoring
tokio = { version = "1", features = ["full"] }
sysinfo = "0.24"

# ETL pipeline tools
csv = "1.3.0"
rusqlite = "0.32.1"